--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="login.js" defer></script>
+  <script type="module" src="index.js" defer></script>
   
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
