--- a/dashboard.html
+++ b/dashboard.html
@@ -80,6 +80,8 @@
     <div class="top">
       <i class="uil uil-bars sidebar-toggle"></i>
 
+      <button id="signOutButton">Sign Out</button>
+      
       <div class="search-box">
         <i class="uil uil-search"></i>
         <input type="text" placeholder="Search here..." />
