--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,7 @@
       </ul>
       <ul class="logout-mode">
         <li>
-          <a href="#">
+          <a id="signOutButton" href="#">
             <i class="uil uil-signout"></i>
             <span class="link-name">Logout</span>
           </a>
@@ -79,9 +79,6 @@
   <section class="dashboard">
     <div class="top">
       <i class="uil uil-bars sidebar-toggle"></i>
-
-      <button id="signOutButton">Sign Out</button>
-      
       <div class="search-box">
         <i class="uil uil-search"></i>
         <input type="text" placeholder="Search here..." />
