--- a/dashboard.html
+++ b/dashboard.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="dashboard.css" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-  <title>Admin Dashboard Panel</title>
+  <title>Dashboard</title>
+  
 </head>
 
 <body>
@@ -16,7 +18,7 @@
       <div class="logo-image">
         <img src="images/bg1.png" alt="" />
       </div>
-      <span class="logo_name" id="789">EasyRider</span>
+      <span class="logo_name">EasyRider</span>
     </div>
     <div class="menu-items">
       <ul class="nav-links">
@@ -83,7 +85,7 @@
         <i class="uil uil-search"></i>
         <input type="text" placeholder="Search here..." />
       </div>
-      <img src="images/profile.jpg" alt="" />
+      <img src="images/profile.png" alt="" />
     </div>
     <div class="dash-content">
       <div class="overview">
