--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="index.js" defer></script>
-  
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>EasyRider Login</title>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
