--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
     <div class="menu-items">
       <ul class="nav-links">
         <li>
-          <a href="#">
+          <a href="dashboard.html">
             <i class="uil uil-estate"></i>
             <span class="link-name">Dahsboard</span>
           </a>
@@ -83,7 +83,7 @@
       <i class="uil uil-bars sidebar-toggle"></i>
       <div class="search-box">
         <i class="uil uil-search"></i>
-        <input type="text" placeholder="Search here..." />
+        <input id="searchInput" onkeyup="myFunction()" type="text" placeholder="Search by Email, Gender, Username & Role" />
       </div>
       <img src="images/profile.png" alt="" />
     </div>
@@ -119,7 +119,7 @@
           <span class="text">Recent Activity</span>
         </div>
         <div class="table-container">
-          <table class="table">
+          <table id="myTable"class="table">
             <thead>
               <tr>
                 <th id="emailHeader">Email</th>
@@ -136,6 +136,7 @@
       </div>
     </div>
   </section>
+  <script src="search.js"></script>
   <script type="module" src="logout.js" defer></script>
   <script src="dashboard.js"></script>
 </body>
