--- a/dashboard.html
+++ b/dashboard.html
@@ -85,7 +85,11 @@
         <i class="uil uil-search"></i>
         <input id="searchInput" onkeyup="myFunction()" type="text" placeholder="Search by Email, Gender, Username & Role" />
       </div>
-      <img src="images/profile.png" alt="" />
+      <p id="welcome-message">Welcome, <span id="username-display"></span>!</p>
+      <p id="welcome-message">Welcome, <span id="username-display1"></span>!</p>
+      <input type="file" id="file-input" accept="image/*" style="display: none;">
+      <img id="profile-image" src="images/profile.png" alt="Profile Image" style="cursor: pointer; border-radius: 50%;">
+     
     </div>
     <div class="dash-content">
       <div class="overview">
