--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,7 @@
         <input id="searchInput" onkeyup="myFunction()" type="text" placeholder="Search by Email, Gender, Username & Role" />
       </div>
       <p id="welcome-message">Welcome, <span id="username-display"></span>!</p>
-      <p id="welcome-message">Welcome, <span id="username-display1"></span>!</p>
+      <p id="welcome-message"><span id="username-display1"></span></p>
       <input type="file" id="file-input" accept="image/*" style="display: none;">
       <img id="profile-image" src="images/profile.png" alt="Profile Image" style="cursor: pointer; border-radius: 50%;">
      
