--- a/driver.html
+++ b/driver.html
@@ -44,13 +44,13 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="driver.html">
               <i class="uil uil-car"></i>
               <span class="link-name">Drivers</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="ridehistory.html">
               <i class="uil uil-history"></i>
               <span class="link-name">Ride History</span>
             </a>
