--- a/users.html
+++ b/users.html
@@ -50,7 +50,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="ridehistory.html">
               <i class="uil uil-history"></i>
               <span class="link-name">Ride History</span>
             </a>
