--- a/ridehistory.html
+++ b/ridehistory.html
@@ -110,7 +110,7 @@
           <i class="uil uil-history"></i>
           <span class="text">Ride History</span>
         </div>
-        <div id="rideRequests"></div>
+        <div id="rideRequests"></div>ss
         </div>
       </div>
   </section>
