--- a/dashboard.html
+++ b/dashboard.html
@@ -55,6 +55,12 @@
               <span class="link-name">Ride History</span>
             </a>
           </li>
+          <li>
+            <a href="companyprofit.html">
+              <i class="uil uil-money-insert"></i>
+              <span class="link-name">Company Earnings</span>
+            </a>
+          </li>
         </ul>
         <ul class="logout-mode">
           <li>
@@ -136,7 +142,7 @@
             <div class="box box4">
               <i class="uil uil-money-insert"></i>
               <span class="text">Company Profit</span>
-              <span class="number" id="driverCount">Loading...</span>
+              <span class="number" id="companyprofit">Loading...</span>
             </div>
           </div>
         </div>
