--- a/driver.html
+++ b/driver.html
@@ -55,6 +55,12 @@
               <span class="link-name">Ride History</span>
             </a>
           </li>
+          <li>
+            <a href="companyprofit.html">
+              <i class="uil uil-money-insert"></i>
+              <span class="link-name">Company Earnings</span>
+            </a>
+          </li>
         </ul>
         <ul class="logout-mode">
           <li>
@@ -136,6 +142,9 @@
                   <th id="dlbs">Driver Licence BS</th>
                   <th id="imageHeader">Status</th>
                   <th>Action</th>
+                  <th id="message">Message</th>
+                  <th>Send Messge</th>
+                  
                 </tr>
               </thead>
               <tbody id="userTableBody2"></tbody>
