--- a/users.html
+++ b/users.html
@@ -55,6 +55,12 @@
               <span class="link-name">Ride History</span>
             </a>
           </li>
+          <li>
+            <a href="companyprofit.html">
+              <i class="uil uil-money-insert"></i>
+              <span class="link-name">Company Earnings</span>
+            </a>
+          </li>
         </ul>
         <ul class="logout-mode">
           <li>
@@ -82,7 +88,7 @@
           <i class="uil uil-search"></i>
           <input
             id="searchInput"
-            onkeyup="myFunction()"
+            onkeyup="myFunction(); myFunction1();"
             type="text"
             placeholder="Search..."
           />
@@ -139,7 +145,7 @@
             <span class="text">Phone Users</span>
           </div>
           <div class="table-container">
-            <table id="myTable" class="table">
+            <table id="myTable1" class="table">
               <thead>
                 <tr>
                   <th id="emailHeader">Phone Number</th>
