--- a/driver.html
+++ b/driver.html
@@ -140,6 +140,7 @@
                   <th id="vcbsHeader">Vehicle Card BS</th>
                   <th id="dlfs">Driver Licence FS</th>
                   <th id="dlbs">Driver Licence BS</th>
+                  <th id="rat">Rating</th>
                   <th id="imageHeader">Status</th>
                   <th>Action</th>
                   <th id="message">Message</th>
