--- a/users.html
+++ b/users.html
@@ -152,6 +152,7 @@
                   <th id="genderHeader">Gender</th>
                   <th id="usernameHeader">Username</th>
                   <th id="roleHeader">Role</th>
+                  <th id="email">Email</th>
                   <th id="imageHeader">Profile Picture</th>
                   
                 </tr>
