--- a/driver.html
+++ b/driver.html
@@ -135,6 +135,7 @@
                   <th id="cnicbs">CNIC FS</th>
                   <th id="userimageidHeader">Profile Picture with ID</th>
                   <th id="vnHeader">Vehicle Name</th>
+                  <th id="vnuHeader">Vehicle Number</th>
                   <th id="vpHeader">Vehicle Photo</th>
                   <th id="vcfsHeader">Vehicle Card FS</th>
                   <th id="vcbsHeader">Vehicle Card BS</th>
